Fixed Nav Z-Index

--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -12,6 +12,8 @@ ul {
     padding: 0.5em;
     margin: 0.5em;
 
+    z-index: 10;
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
